# dev

./: .ansible.cfg  .bash_entrypoint  .bash_profile  .bashrc  .bashrc_path  .bazelignore  .bazelrc  .bazelversion  .cirrus.yml  .devcontainer.json  .direnvlib  .direnvrc  .dockerignore  .dotfiles  .env  .env.example  .envrc  .gitconfig  .gitconfig.default  .gitignore  .gitmodules  .gitpod.yml  .image-versions.txt  .lintstagedrc  .nix-profile  .password-store  .pre-commit-config.yaml  .release-please-manifest.json  .teller.yml  .tool-versions  .tool-versions-all  .tool-versions-gh  .vault  .vimrc  .vscode  Brewfile  CHANGELOG  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  (+81 more)
m/: .bazel_fix_commands.json  .bazelignore  .bazelrc  .bazelrc.user.example  .bazelversion  .env.example  .envrc  .gitignore  .npmrc  .pre-commit-config.yaml  .trunk  BUILD  BUILD.bazel  CLAUDE.md  CODE.md  DOCKER-BUILDX.sh  Dockerfile  Dockerfile.latest  Earthfile  GODOT.txt  Justfile  LINKERD.txt  MERGE.md  MODULE.bazel  Makefile  NOTES.md  README.md  REPO.bazel  TODO  TUTORIAL.md  Tiltfile  Tiltfile.old  WORKSPACE  bb.yaml  buf.gen.yaml  buf.work.yaml  buf.yaml  buf_deps.bzl  cdktf.json  content.cue  (+35 more)
m/.buildkite/: pipeline.yml
m/.devcontainer/: Dockerfile  README.md  devcontainer.json
m/.trunk/: trunk.yaml
m/PhaserEditor2D-v3/: Makefile
m/a/: Makefile  README.md  buf.gen.yaml  cue.yaml  generate-readmes.sh  go.mod  go.sum  make_crd_cue_gen.sh  make_update_cue_gen.sh  mise.toml
m/ai/: mise.toml
m/app/: .gitignore  gateway.yaml  headlamp.yaml  linkerd-viz.yaml  linkerd.yaml
m/aws/: BUILD.bazel  Earthfile  Makefile  README.md  aws-account.cue  aws-org.cue  aws.cue  aws_accounts.txt  aws_cli.sh  aws_config.sh  aws_list_accounts.sh  aws_orgs.txt  flake.json  flake.nix  main.cue  mise.toml  template_account.txt  wrappers.sh
m/b/: EXAMPLES.md  README.md
m/bashel/: BUILD.bazel  BUILD.cue  README.md  bazel.cue  build.cue  mise.toml  test.sh
m/boot/: Makefile  go.mod  go.sum  k8s.txt  main.cue
m/bootstrap/: main.tf
m/c/: .gitignore  BUILD.bazel  BUILD.bazel.cluster  CLAUDE.md  Makefile  Makefile.cluster  README.md  TODO  accumulate.sh  app.json  ca.key  class.yaml  cluster.cue  cluster_schema.cue  configure.sh  deathstar.yaml  decode_base64.py  defn-run.cue  discovery.cue  district.yaml  environment.cue  environment_schema.cue  execute.sh  external.cue  flake.json  flake.nix  gen.cue  gen_karpenter.sh  gen_kustomize.sh  gen_kustomize_bundle.sh  images.txt  ingest.sh  karpenter-values.yaml  kustomize.cue  kustomize_schema.cue  main.cue  main.yaml  make_add_generated.sh  make_clean_generated.sh  make_generate_kustomize.sh  (+14 more)
m/cache/: Makefile  README.md  docker-compose.yaml  nginx.conf
m/ch/: .gitignore  README.md  TODO  meta-data  network-config  network-jammy  network-noble  network-noble-1  network-noble-2  network-noble-3  user-data
m/claude/: convert_mise_tasks.py
m/cmd/: BUILD.bazel  Makefile  cli.yaml  cmd.go  main.go  mise.toml
m/coder/: .gitignore  Earthfile  Makefile  README  README.md  cloudflare.ini.example  coder-socat.service  coder-socat.sh  coder-sync.service  coder-sync.sh  coder.service  coder.sh  mod
m/comfyui/: Justfile
m/command/: BUILD.bazel  README.md  api.go  client.go  infra.cue  infra.go  root.go  server.go  tui.go
m/common/: Makefile  Makefile.bazel  Makefile.build  Makefile.coder  README.md  Tiltfile  app.cue  argocd.cue  aws.Justfile  bazel.Justfile  chart.cue  coder.Justfile  deploy.cue  deployment.cue  github.Justfile  gpg.Justfile  ingress.cue  lib.Justfile  lib.just  ns.cue  output.cue  playbook.Justfile  service.cue  tilt.Justfile  value.cue
m/cue/: BUILD.bazel  cue.bzl  cue.go
m/cue-demo/: README.md  people.cue
m/cue.mod/: BUILD.bazel  README.md  module.cue
m/cutout/: cookiecutter.json
m/cv/: .gitignore  BUILD.bazel  Caddyfile  Justfile  LAST  README.md  TODO  TODO.md  blur  blurhash-loader.js  blurmap-batch.go  blurmap-commit.go  blurmap-common.go  blurmap-download.go  blurmap-fem.go  blurmap-fixup.go  blurmap-gallery.go  blurmap-html.go  blurmap-import.go  blurmap-report.go  blurmap-todo.go  blurmap-user.go  blurmap.go  cats.html  download.sh  ersgan.mjs  fem.sh  fm.mjs  fm.sh  g  gallery.css  gallery.html  gallery.js  go.mod  img  index.html  js-username  mise.toml  no  package-lock.json  (+14 more)
m/d4us/: Justfile  Makefile  README.md  mise.toml  scripting.cue  test.sh
m/db/: BUILD.bazel  README.md  TODO  db.go  main.go  mise.toml
m/dc/: .env  .env.example  Caddyfile  Dockerfile  Justfile  README.md  TODO  docker-compose.yaml  entrypoint.sh  install.sh
m/demo/: .envrc  .gitignore  Dockerfile  Makefile  README.md  Tiltfile  cute  demo.yaml  deploy.yaml  devspace.yaml  flake.nix  go.mod  go.sum  index.cue  mise.toml  package-lock.json  package.json  stacks  starship.toml
m/dev/: BUILD.bazel  Makefile  Tiltfile  deploy.yaml  dev.go  flake.json
m/devpod/: main.tf
m/docs/: index.html
m/e/: coder-amanibhavam-class-cluster.yaml  coder-amanibhavam-class-manual.yaml  coder-amanibhavam-dev-cluster.yaml  coder-amanibhavam-district-cluster.yaml  coder-amanibhavam-district-manual.yaml  coder-amanibhavam-district0-cluster.yaml  coder-amanibhavam-district1-cluster.yaml  coder-amanibhavam-school-cluster.yaml  coder-amanibhavam-school-manual.yaml  k3d-dfd-bootstrap.yaml  k3d-dfd-cluster.yaml  k3d-dfd-manual.yaml  k3d-dfd-vc0.yaml  k3d-dfd-vc1.yaml  k3d-dfd-vc2.yaml  k3d-dfd.yaml  k3d-global.yaml  vcluster-dfd-vc0.yaml  vcluster-dfd-vc1.yaml  vcluster-global-vc0.yaml  vcluster-k3d-dfd-vc0.yaml  vcluster-k3d-dfd-vc1.yaml  vcluster-vc0.yaml
m/earthly/: BUILD.bazel  docker_load.sh  earthly.bzl  earthly_build.sh
m/env/: defn.xxx.yaml
m/etc/: demo1.nomad  demo2.nomad  demo3.nomad  derp.json  derper.conf  ec2-user-data.template  env.sh  hello.cue  hello.json  hello.nomad
m/f/: Justfile  README.md  flake.json  flake.nix  mise.toml
m/flyctl/: .golangci.yml  BUILD.bazel  Makefile  NOTICE  NOTICE-README.md  building.md  go.mod  go.sum  main.go
m/game/: .gitignore  Dockerfile  GODOT.txt  Justfile  Makefile  Makefile.4  README.md  Tiltfile  game.Justfile  (+2 more)
(+10390 files in other folders)
