"""
"""

module(
    name = "defn_dev",
    version = "0.0.1",
)

# https://registry.bazel.build/modules/bazel_skylib
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# https://registry.bazel.build/modules/rules_img
bazel_dep(name = "rules_img", version = "0.2.12")

# https://registry.bazel.build/modules/rules_shell
bazel_dep(name = "rules_shell", version = "0.6.1")

# https://registry.bazel.build/modules/rules_pkg
bazel_dep(name = "rules_pkg", version = "1.1.0")

# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "33.1")

# https://registry.bazel.build/modules/rules_proto
bazel_dep(name = "rules_proto", version = "7.1.0")

# https://registry.bazel.build/modules/rules_proto_grpc
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")

# https://registry.bazel.build/modules/rules_proto_grpc_go
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")

# https://registry.bazel.build/modules/rules_cc
bazel_dep(name = "rules_cc", version = "0.2.14")

# https://registry.bazel.build/modules/rules_go
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")

# https://registry.bazel.build/modules/gazelle
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")
go_sdk.host()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alecaivazis_survey_v2",
    "com_github_alecthomas_chroma",
    "com_github_azazeal_pause",
    "com_github_bitfield_script",
    "com_github_briandowns_spinner",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_log",
    "com_github_cli_safeexec",
    "com_github_coder_websocket",
    "com_github_docker_go_units",
    "com_github_dustin_go_humanize",
    "com_github_fsnotify_fsnotify",
    "com_github_go_logr_logr",
    "com_github_gofrs_flock",
    "com_github_google_shlex",
    "com_github_haileys_go_harlog",
    "com_github_hashicorp_go_multierror",
    "com_github_jinzhu_copier",
    "com_github_joho_godotenv",
    "com_github_khan_genqlient",
    "com_github_kr_text",
    "com_github_labstack_echo_v4",
    "com_github_lann_builder",
    "com_github_logrusorgru_aurora",
    "com_github_lucasb_eyer_go_colorful",
    "com_github_makenowjust_heredoc_v2",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_isatty",
    "com_github_mgutz_ansi",
    "com_github_miekg_dns",
    "com_github_morikuni_aec",
    "com_github_muesli_gamut",
    "com_github_muesli_termenv",
    "com_github_oklog_ulid_v2",
    "com_github_olekukonko_tablewriter",
    "com_github_pkg_errors",
    "com_github_riverqueue_river",
    "com_github_riverqueue_river_riverdriver_riversqlite",
    "com_github_rogpeppe_go_internal",
    "com_github_samber_lo",
    "com_github_skratchdot_open_golang",
    "com_github_sourcegraph_conc",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_superfly_fly_go",
    "com_github_superfly_graphql",
    "com_github_superfly_macaroon",
    "com_zx2c4_golang_wireguard",
    "dev_gvisor_gvisor",
    "in_gopkg_yaml_v3",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_cuelang_go",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_time",
    "org_modernc_sqlite",
    "org_uber_go_fx",
    "org_uber_go_zap",
)

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "ubuntu_image",
    digest = "sha256:1e622c5f073b4f6bfad6632f2616c7f59ef256e96fe78bf6a595d1dc4376ac02",
    registry = "index.docker.io",
    repository = "library/ubuntu",
    tag = "24.04",
)

pull(
    name = "defn_dev_image",
    digest = "sha256:b450043e4924c399d2826f23359ca9c46eab82250efdbb0f6bc62855d9dc7c5b",
    registry = "ghcr.io",
    repository = "defn/dev",
    tag = "latest",
)
