load("//b/cue:cue.bzl", "cue_export")

filegroup(
    name = "template_account",
    srcs = ["template_account.txt"],
)

filegroup(
    name = "aws_config_script",
    srcs = ["aws_config.sh"],
)

# aws configuration
genrule(
    name = "aws_config_cfg",
    srcs = [
        "config",
        "template_account",
    ],
    outs = ["aws_config.txt"],
    cmd = "$(location aws_config_script) config=$(location config) template_account=$(location template_account) $@",
    tools = [
        "aws_config_script",
        "//b/lib:lib_sh",
    ],
)

# app configuration
cue_export(
    name = "config",
    srcs = [
        "//cue.mod:cue_mod",
        "//tf:cue",
    ],
    cues = glob(["*.cue"]),
)

# aws cli wrapper
sh_binary(
    name = "aws__cli",
    srcs = ["aws_cli.sh"],
    args = [
        "$(location //pkg/awscli:flake_aws)",
        "$(location //pkg/secrets:flake_aws-vault)",
        "$(location aws_config_cfg)",
    ],
    data = [
        "aws_config_cfg",
        "//pkg/awscli:flake_aws",
        "//pkg/secrets:flake_aws-vault",
    ],
)

sh_binary(
    name = "aws__list_accounts",
    srcs = ["aws_list_accounts.sh"],
    args = [
        "$(location config)",
    ],
    data = [
        "config",
    ],
)
