filegroup(
    name = "common",
    srcs = glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

# karpenter configuration
filegroup(
    name = "gen_karpenter_script",
    srcs = ["gen_karpenter.sh"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gen_karpenter_values",
    srcs = ["karpenter-values.yaml"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gen_kustomize_script",
    srcs = ["gen_kustomize.sh"],
    visibility = ["//visibility:public"],
)