filegroup(
    name = "common",
    srcs = glob(["*.cue"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "gen_kustomize_bundle_sh",
    srcs = ["gen_kustomize_bundle.sh"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "decode_base64_py",
    srcs = ["decode_base64.py"],
    visibility = ["//visibility:public"],
)
