load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/defn/dev/m/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//command/api",
        "//command/meh",
        "//command/root",
        "//command/tui",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
