load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/defn/dev/m/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/base",
        "//command/api",
        "//command/hello",
        "//command/root",
        "//command/tui",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_fx//fxevent",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
