load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "command",
    srcs = [
        "api.go",
        "client.go",
        "infra.go",
        "root.go",
        "server.go",
        "tui.go",
    ],
    embedsrcs = ["infra.cue"],
    importpath = "github.com/defn/dev/m/command",
    visibility = ["//visibility:public"],
    deps = [
        "//a/demo/v1:demo",
        "//a/demo/v1/demov1connect",
        "@com_github_aws_constructs_go_constructs_v10//:constructs",
        "@com_github_aws_jsii_runtime_go//:jsii-runtime-go",
        "@com_github_bufbuild_connect_go//:connect-go",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//dataawsssoadmininstances",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//identitystoregroup",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//identitystoregroupmembership",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//identitystoreuser",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//organizationsaccount",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//organizationsorganization",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//provider",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//ssoadminaccountassignment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//ssoadminmanagedpolicyattachment",
        "@com_github_cdktf_cdktf_provider_aws_go_aws_v14//ssoadminpermissionset",
        "@com_github_charmbracelet_bubbles//list",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_hashicorp_terraform_cdk_go_cdktf//:cdktf",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_cuelang_go//cue",
        "@org_cuelang_go//cue/cuecontext",
        "@org_cuelang_go//cue/load",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)
