SHELL := /bin/bash

post-bazel:
	if test -f $(build); then \
		mkdir -p store; \
		rsync -ia --delete $$(nix-store --query --requisites $$(ldd $(build) | grep /nix/store | awk '{print $$3}' | cut -d/ -f1-4 | sort -u)) store/; \
		install -v -m 0755 -o ubuntu -g ubuntu $(build) $(release); \
	fi

watch:
	b build
	b watch
