load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "db_lib",
    srcs = ["db.go"],
    importpath = "github.com/defn/dev/m/db",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/base",
        "//cmd/runner",
        "//command/root",
        "@com_github_riverqueue_river//:river",
        "@com_github_riverqueue_river//rivermigrate",
        "@com_github_riverqueue_river_riverdriver_riversqlite//:riversqlite",
        "@com_github_spf13_cobra//:cobra",
        "@org_modernc_sqlite//:sqlite",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "db",
    embed = [":db_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)
