load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "flyctl_lib",
    srcs = ["main.go"],
    importpath = "github.com/defn/dev/m/flyctl",
    visibility = ["//visibility:private"],
    deps = [
        "//flyctl/internal/buildinfo",
        "//flyctl/internal/cli",
        "//flyctl/iostreams",
        "@org_golang_x_sys//unix",
    ],
)

go_binary(
    name = "flyctl",
    embed = [":flyctl_lib"],
    visibility = ["//visibility:public"],
)
