load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer")
load("@rules_img//img:push.bzl", "image_push")

exports_files(["hello.cue"])

go_library(
    name = "hello_lib",
    srcs = ["hello.go"],
    embedsrcs = ["hello.cue"],
    importpath = "github.com/defn/dev/m/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//:m",
        "//cmd/base",
        "//cmd/runner",
        "//command/root",
        "//cue",
        "@com_github_bitfield_script//:script",
        "@com_github_lann_builder//:builder",
        "@com_github_samber_lo//:lo",
        "@com_github_sourcegraph_conc//pool",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["hello_test.go"],
    data = glob(["testdata/**"]),
    embed = [":hello_lib"],
    deps = ["@com_github_rogpeppe_go_internal//testscript"],
)

image_layer(
    name = "hello_layer",
    srcs = {
        "/hello": "//hello:hello",
    },
)

image_manifest(
    name = "hello_manifest",
    base = "@defn_dev_image",
    layers = [
        ":hello_layer",
    ],
)

image_push(
    name = "push",
    image = ":hello_manifest",
    registry = "ghcr.io",
    repository = "defn/dev",
    tag = "bazel",
)
