load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

exports_files([
    "hello.cue",
])

go_library(
    name = "hello_lib",
    srcs = [
        "greeting.go",
        "main.go",
    ],
    embedsrcs = ["hello.cue"],
    importpath = "github.com/defn/dev/m/hello",
    visibility = ["//visibility:private"],
    deps = [
        "//:m",
        "//cmd/base",
        "//cmd/runner",
        "//command/root",
        "//cue",
        "@com_github_bitfield_script//:script",
        "@com_github_samber_lo//:lo",
        "@com_github_sourcegraph_conc//pool",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "hello_go",
    embed = [":hello_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "greeting_test",
    srcs = ["greeting_test.go"],
    embed = [":hello_lib"],
)

go_test(
    name = "hello_test",
    srcs = ["main_test.go"],
    data = glob(
        ["testdata/**"],
        allow_empty = True,
    ),
    embed = [":hello_lib"],
    deps = ["@com_github_rogpeppe_go_internal//testscript"],
)
