flake_names = [
    "attic",
    "cue",
    "cuetsy",
    "gum",
    "vhs",
    "glow",
    "dyff",
    "az",
    "home",
    "secrets",
    "tailscale",
    "vpn",
    "utils",
    "just",
    "buildifier",
    "bazelisk",
    "ibazel",
    "oci",
    "development",
    "step",
    "awscli",
    "chamber",
    "cloud",
    "terraform",
    "kubectl",
    "k3d",
    "k9s",
    "helm",
    "kustomize",
    "stern",
    "kubeseal",
    "argocd",
    "vcluster",
    "coder",
    "codeserver",
    "tilt",
    "gh",
    "earthly",
    "flyctl",
    "oras",
    "regctl",
    "regbot",
    "regsync",
    "buildkite",
    "buildevents",
    "honeyvent",
    "honeymarker",
    "honeytail",
    "godev",
    "jsdev",
    "pydev",
    "rustdev",
    "shell",
]

flake_paths = [
    b
    for f in flake_names
    for b in [
        "//pkg/{}:flake_path".format(f),
    ]
]

flake_stores = [
    b
    for f in flake_names
    for b in [
        "//pkg/{}:flake_store".format(f),
    ]
]

filegroup(
    name = "gen_something",
    srcs = ["gen_something.sh"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "something",
    srcs = flake_paths + flake_stores,
    outs = ["something.tar"],
    cmd = "$(location :gen_something) {} {} $@ {}".format(
        " ".join([
            "{}_path=$(location //pkg/{}:flake_path)".format(f, f)
            for f in flake_names
        ]),
        " ".join([
            "{}_store=$(location //pkg/{}:flake_store)".format(f, f)
            for f in flake_names
        ]),
        " ".join(flake_names),
    ),
    tools = [
        ":gen_something",
        "//b/lib:lib_sh",
    ],
    visibility = ["//visibility:public"],
)
