load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "cue",
    srcs = [
        "infra.cue",
        "//command/infra:cue",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "infra_lib",
    srcs = ["infra.go"],
    importpath = "github.com/defn/dev/m/infra",
    visibility = ["//visibility:public"],
    deps = ["@com_github_aws_jsii_runtime_go//:jsii-runtime-go"],
)
